// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls api to get all images on construction 1`] = `
<div
  className="flex flex-column"
>
  <Component
    score={0}
    secondsRemaining={60}
    status="IN-PROGRESS"
  />
  <section
    id="middle-region"
  >
    <h1
      className="text-center"
    >
      Round 
      <span
        className="round"
      >
        1
      </span>
    </h1>
    <Row
      className="main-container-row"
      tag="div"
    >
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="images-container"
        >
          <div
            className="images-container-single"
            key="abc-Xyz"
          >
            <img
              alt="nice try"
              className="images-container-single-image"
              key="abc-Xyz"
              src="image_1.jpg"
            />
          </div>
          <div
            className="images-container-single"
            key="abc-Xyz"
          >
            <img
              alt="nice try"
              className="images-container-single-image"
              key="abc-Xyz"
              src="image_1.jpg"
            />
          </div>
        </div>
      </Col>
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="input-container"
        >
          <h5>
            Guess the search term
          </h5>
          <textarea
            className="input-container-guess"
            disabled={false}
            onChange={[Function]}
          />
          <Link
            className="input-container-next-round next-round game-button"
            innerRef={
              Object {
                "current": null,
              }
            }
            replace={false}
            to={
              Object {
                "pathname": "/results",
                "state": Object {
                  "score": 0,
                },
              }
            }
          >
            Next
          </Link>
        </div>
      </Col>
    </Row>
  </section>
  <Component />
</div>
`;

exports[`snapshot testing 1`] = `
<div
  className="flex flex-column"
>
  <Component
    score={0}
    secondsRemaining={60}
    status="LOADING ..."
  />
  <section
    id="middle-region"
  >
    <h1
      className="text-center"
    >
      Round 
      <span
        className="round"
      >
        1
      </span>
    </h1>
    <Row
      className="main-container-row"
      tag="div"
    >
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="images-container"
        >
          <div
            className="background"
          />
        </div>
      </Col>
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="input-container"
        >
          <h5>
            Guess the search term
          </h5>
          <textarea
            className="input-container-guess"
            disabled={false}
            onChange={[Function]}
          />
          <Link
            className="input-container-next-round next-round game-button"
            innerRef={
              Object {
                "current": null,
              }
            }
            replace={false}
            to="/round/2"
          >
            Next
          </Link>
        </div>
      </Col>
    </Row>
  </section>
  <Component />
</div>
`;
